--- a/public/views/index.html
+++ b/public/views/index.html
@@ -2,10 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="/vendors/bootstrap.min.css">
     <link rel="stylesheet" href="/styles/styles.css">
+    <script src="/vendors/react0.js" charset="utf-8"></script>
+    <script src="/scripts/client.js" charset="utf-8"></script>
     <title>React Calculator</title>
   </head>
   <body>
-
+    <h1>React Calculator</h1>
   </body>
 </html>
