added inputs and buttons

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -10,5 +10,18 @@
   </head>
   <body>
     <h1>React Calculator</h1>
+    <h2>
+        <input type="number" id="firstInput" placeholder="number">
+        <input type="number" id="secondInput" placeholder="number">
+      </h2>
+      <h3>
+        <button type="button" class="calculate" id="add" name="Add">+</button>
+        <button type="button" class="calculate" id="subtract" name="Subtract">-</button>
+        <button type="button" class="calculate" id="multiply" name="Multiply">*</button>
+        <button type="button" class="calculate" id="divide" name="Divide">/</button>
+        <button type="button" class="clear" id="clear" name="Clear">Clear</button>
+      </h3>
+    </div>
+    <div id="outputDiv"></div>
   </body>
 </html>
