--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,4 +1,14 @@
 h1 {
-  color: Blue;
+  color: DarkOliveGreen;
   font-family: Helvetica;
+  font-weight: bold;
+}
+
+.navbar {
+  border-radius: 0px;
+}
+
+body {
+  color: Navy;
+  background-color: Chocolate;
 }
