--- a/public/views/index.html
+++ b/public/views/index.html
@@ -15,7 +15,7 @@
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <div class="navbar-header">
-        <h1>React Calculator</h1>
+        <h1>react calculator</h1>
       </div>
     </div>
   </nav>
@@ -30,7 +30,7 @@
         <button type="button" class="calculate" id="subtract" name="Subtract">-</button>
         <button type="button" class="calculate" id="multiply" name="Multiply">*</button>
         <button type="button" class="calculate" id="divide" name="Divide">/</button>
-        <button type="button" class="clear" id="clear" name="Clear">Clear</button>
+        <button type="button" class="clear" id="clear" name="Clear">clear</button>
       </h3>
   </div>
   <div id="outputDiv"></div>
