added react container

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="styles/styles.css">
   <script src="vendors/react.js" charset="utf-8"></script>
   <script src="vendors/react-dom.js" charset="utf-8"></script>
-  <script src="scripts/client.js" charset="utf-8"></script>
+  <!-- <script src="scripts/client.js" charset="utf-8"></script> -->
   <title>React Calculator</title>
 </head>
 
@@ -20,7 +20,8 @@
     </div>
   </nav>
 
-  <div class="container">
+  <div class="container" id="react-container">
+    <script src="scripts/client.js" charset="utf-8"></script>
     <h2>
         <input type="number" id="firstInput" placeholder="number">
         <input type="number" id="secondInput" placeholder="number">
